--- a/The economics automation.ipynb
+++ b/The economics automation.ipynb
@@ -10,11 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas\n",
+    "import time\n",
+    "import random"
    ]
   },
   {
@@ -26,90 +28,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'D:\\\\ETUDE\\\\UTBM\\\\6 - GMC06 - UTSEUS\\\\Cours UTSEUS\\\\US02 - Data science literacy\\\\Data-sheet-STUDENTS.xlsx' ## Lien du fichier excel\n",
+    "df = pandas.read_excel(filename, header = 2, usecols = 'B:AR') ## Lecture du fichier seul les colonnes comprisent entre B et AR sont retenues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Le code utilise les mêmes requêtes que précédemment\n",
+    "def get_iso_code(country_name):\n",
+    "    try:\n",
+    "        url = 'https://restcountries.eu/rest/v2/name/' + country_name\n",
+    "        r = requests.get(url)\n",
+    "        data = r.json()\n",
+    "        return data[0]['alpha3Code']\n",
+    "    except KeyError:\n",
+    "        #print('[ERROR] cannot get code for', country_name)\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries={}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Afghanistan\n",
-      "Albania\n",
-      "Armenia\n",
-      "Azerbaijan\n",
-      "Bahrain\n",
-      "Bangladesh\n",
-      "Belarus\n",
-      "Bhutan\n",
-      "Bosnia and Herzegovina\n",
-      "Brunei\n",
-      "Bulgaria\n",
-      "Cambodia\n",
-      "China\n",
-      "Croatia\n",
-      "Czech Republic\n",
-      "East Timor\n",
-      "Egypt\n",
-      "Estonia\n",
-      "France\n",
-      "Georgia\n",
-      "Germany\n",
-      "Hungary\n",
-      "India\n",
-      "Indonesia\n",
-      "Iran\n",
-      "Iraq\n",
-      "Israel\n",
-      "Jordan\n",
-      "Kazakhstan\n",
-      "Kuwait\n",
-      "Kyrgyzstan\n",
-      "Laos\n",
-      "Latvia\n",
-      "Lebanon\n",
-      "Lithuania\n",
-      "Macedonia\n",
-      "Malaysia\n",
-      "Maldives\n",
-      "Moldova\n",
-      "Mongolia\n",
-      "Montenegro\n",
-      "Myanmar\n",
-      "Nepal\n",
-      "Oman\n",
-      "Pakistan\n",
-      "Philippines\n",
-      "Poland\n",
-      "Qatar\n",
-      "Romania\n",
-      "Russia\n",
-      "Saudi Arabia\n",
-      "Serbia\n",
-      "Singapore\n",
-      "Slovakia\n",
-      "Slovenia\n",
-      "Sri Lanka\n",
-      "Syria\n",
-      "Tajikistan\n",
-      "Thailiand\n",
-      "The United Arab Emirates\n",
-      "Turkey\n",
-      "Turkmenistan\n",
-      "United Kingdom\n",
-      "United States of America\n",
-      "Ukraine\n",
-      "Uzbekistan\n",
-      "Vietnam\n",
-      "Yemen\n"
+      "Afghanistan AFG\n",
+      "Albania ALB\n",
+      "Armenia ARM\n",
+      "Azerbaijan AZE\n",
+      "Bahrain BHR\n",
+      "Bangladesh BGD\n",
+      "Belarus BLR\n",
+      "Bhutan BTN\n",
+      "Bosnia and Herzegovina BIH\n",
+      "Brunei BRN\n",
+      "Bulgaria BGR\n",
+      "Cambodia KHM\n",
+      "China CHN\n",
+      "Croatia HRV\n",
+      "Czech Republic CZE\n",
+      "East Timor TLS\n",
+      "Egypt EGY\n",
+      "Estonia EST\n",
+      "France FRA\n",
+      "Georgia GEO\n",
+      "Germany DEU\n",
+      "Hungary HUN\n",
+      "India IOT\n",
+      "Indonesia IDN\n",
+      "Iran IRN\n",
+      "Iraq IRQ\n",
+      "Israel ISR\n",
+      "Jordan JOR\n",
+      "Kazakhstan KAZ\n",
+      "Kuwait KWT\n",
+      "Kyrgyzstan KGZ\n",
+      "Laos LAO\n",
+      "Latvia LVA\n",
+      "Lebanon LBN\n",
+      "Lithuania LTU\n",
+      "Macedonia MKD\n",
+      "Malaysia MYS\n",
+      "Maldives MDV\n",
+      "Moldova MDA\n",
+      "Mongolia MNG\n",
+      "Montenegro MNE\n",
+      "Myanmar MMR\n",
+      "Nepal NPL\n",
+      "Oman OMN\n",
+      "Pakistan PAK\n",
+      "Philippines PHL\n",
+      "Poland POL\n",
+      "Qatar QAT\n",
+      "Romania ROU\n",
+      "Russia RUS\n",
+      "Saudi Arabia SAU\n",
+      "Serbia SRB\n",
+      "Singapore SGP\n",
+      "Slovakia SVK\n",
+      "Slovenia SVN\n",
+      "Sri Lanka LKA\n",
+      "Syria SYR\n",
+      "Tajikistan TJK\n",
+      "Thailiand THA\n",
+      "The United Arab Emirates ARE\n",
+      "Turkey TUR\n",
+      "Turkmenistan TKM\n",
+      "United Kingdom GBR\n",
+      "United States of America USA\n",
+      "Ukraine UKR\n",
+      "Uzbekistan UZB\n",
+      "Vietnam VNM\n",
+      "Yemen YEM\n"
      ]
     }
    ],
    "source": [
-    "filename = 'D:\\\\ETUDE\\\\UTBM\\\\6 - GMC06 - UTSEUS\\\\Cours UTSEUS\\\\US02 - Data science literacy\\\\Data-sheet-STUDENTS.xlsx' ## Lien du fichier excel\n",
-    "df = pandas.read_excel(filename, header = 2, usecols = 'B:AR') ## Lecture du fichier seul les colonnes comprisent entre B et AR sont retenues\n",
-    "\n",
     "for i,v in df['Country (according to CN Gov):'].iteritems():\n",
-    "    print(v.split('(')[0].strip()) ## Impression des pays"
+    "    country_name = v.split('(')[0].strip()\n",
+    "    if country_name not in countries.keys():\n",
+    "        iso_code = get_iso_code(country_name)\n",
+    "        #if iso_code is not None:\n",
+    "        #    countries[country_name] = iso_code #Rédige le nom du pays et l'iso_code\n",
+    "        if country_name == 'Thailiand':\n",
+    "            iso_code = 'THA'\n",
+    "        elif country_name == 'The United Arab Emirates':\n",
+    "            iso_code = 'ARE'\n",
+    "        countries[country_name] = iso_code\n",
+    "        print(country_name,iso_code)\n",
+    "            #time.sleep(0.5 + random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open ('C:\\\\Users\\\\Cyril\\\\Documents\\\\GitHub\\\\US02_Python\\\\countries.pickle','wb+') as fp:\n",
+    "    pickle.dump(countries,fp)"
    ]
   },
   {
@@ -121,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +253,7 @@
      ]
     }
    ],
-   "source": [
-    "## Le code utilise les mêmes requêtes que précédemment\n",
-    "country_name = 'France'\n",
-    "url = 'https://restcountries.eu/rest/v2/name/' + country_name\n",
-    "r = requests.get(url)\n",
-    "data = r.json()\n",
-    "print(country_name, data[0]['alpha3Code'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
