--- a/GOT/GOT_Session1.ipynb
+++ b/GOT/GOT_Session1.ipynb
@@ -184,19 +184,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-940a5faff667>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcharacters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: ''"
-     ]
+     "data": {
+      "text/plain": [
+       "[('Old Nan', 629, 636),\n",
+       " ('North', 3194, 3199),\n",
+       " ('Ass', 3978, 3981),\n",
+       " ('Old Nan', 6236, 6243),\n",
+       " ('Ice', 9169, 9172),\n",
+       " ('Hullen', 11496, 11502),\n",
+       " ('Bran', 159, 163),\n",
+       " ('Robb', 463, 467),\n",
+       " ('Mance Rayder', 514, 526),\n",
+       " ('Robb', 1065, 1069),\n",
+       " ('Robb', 1388, 1392),\n",
+       " ('Jon', 1397, 1400),\n",
+       " ('Bran', 1716, 1720),\n",
+       " ('Bran', 2117, 2121),\n",
+       " ('Stark', 2159, 2164),\n",
+       " ('Eddard Stark', 2516, 2528),\n",
+       " ('Theon Greyjoy', 2553, 2566),\n",
+       " ('Robb', 2680, 2684),\n",
+       " ('Jory Cassel', 2842, 2853),\n",
+       " ('Robert', 2952, 2958),\n",
+       " ('Eddard', 3130, 3136),\n",
+       " ('Jon Snow', 3296, 3304),\n",
+       " ('Greyjoy', 3833, 3840),\n",
+       " ('Theon', 3849, 3854),\n",
+       " ('Jon', 3983, 3986),\n",
+       " ('Greyjoy', 4011, 4018),\n",
+       " ('Jon', 4126, 4129),\n",
+       " ('Jon', 4149, 4152),\n",
+       " ('Robb', 4454, 4458),\n",
+       " ('Jon Snow', 4643, 4651),\n",
+       " ('Stark', 4743, 4748),\n",
+       " ('Jon', 4750, 4753),\n",
+       " ('Robb', 4868, 4872),\n",
+       " ('Jon', 4903, 4906),\n",
+       " ('Robb', 4925, 4929),\n",
+       " ('Robb', 4955, 4959),\n",
+       " ('Robb', 5033, 5037),\n",
+       " ('Jon', 5137, 5140),\n",
+       " ('Robb', 5174, 5178),\n",
+       " ('Robb', 5238, 5242),\n",
+       " ('Jon', 5265, 5268),\n",
+       " ('Robb', 5507, 5511),\n",
+       " ('Bran', 5693, 5697),\n",
+       " ('Bran', 5736, 5740),\n",
+       " ('Robb', 5876, 5880),\n",
+       " ('Jon', 5912, 5915),\n",
+       " ('Robert', 6613, 6619),\n",
+       " ('Targaryen', 6699, 6708),\n",
+       " ('Starks', 6816, 6822),\n",
+       " ('Robb', 7117, 7121),\n",
+       " ('Jon', 7401, 7404),\n",
+       " ('Bran', 7497, 7501),\n",
+       " ('Robb', 7526, 7530),\n",
+       " ('Jory', 7566, 7570),\n",
+       " ('Jory', 7739, 7743),\n",
+       " ('Robb', 7789, 7793),\n",
+       " ('Jon', 7837, 7840),\n",
+       " ('Robb', 7919, 7923),\n",
+       " ('Jory Cassel', 8202, 8213),\n",
+       " ('Theon Greyjoy', 8218, 8231),\n",
+       " ('Greyjoy', 8266, 8273),\n",
+       " ('Jory', 8436, 8440),\n",
+       " ('Robb', 8466, 8470),\n",
+       " ('Robb', 8531, 8535),\n",
+       " ('Jory', 8628, 8632),\n",
+       " ('Bran', 8634, 8638),\n",
+       " ('Jon', 8819, 8822),\n",
+       " ('Jory', 8824, 8828),\n",
+       " ('Theon Greyjoy', 8834, 8847),\n",
+       " ('Greyjoy', 8907, 8914),\n",
+       " ('Robb', 8935, 8939),\n",
+       " ('Greyjoy', 8959, 8966),\n",
+       " ('Jon', 9513, 9516),\n",
+       " ('Theon Greyjoy', 9587, 9600),\n",
+       " ('Jon', 9698, 9701),\n",
+       " ('Robb', 9792, 9796),\n",
+       " ('Robb', 9941, 9945),\n",
+       " ('Robb', 10083, 10087),\n",
+       " ('Jon', 10174, 10177),\n",
+       " ('Direwolves', 10378, 10388),\n",
+       " ('Jory', 10497, 10501),\n",
+       " ('Jory', 10552, 10556),\n",
+       " ('Robb', 10711, 10715),\n",
+       " ('Jory', 11343, 11347),\n",
+       " ('Theon Greyjoy', 11593, 11606),\n",
+       " ('Greyjoy', 11792, 11799),\n",
+       " ('Robb', 11801, 11805),\n",
+       " ('Harwin', 11957, 11963),\n",
+       " ('Hullen', 11973, 11979),\n",
+       " ('Robb', 12311, 12315),\n",
+       " (\"Ser Rodrik's\", 12337, 12349),\n",
+       " ('Stark', 12513, 12518),\n",
+       " ('Jon', 12520, 12523),\n",
+       " ('Jon', 12699, 12702),\n",
+       " ('Jon', 12737, 12740),\n",
+       " ('Jon', 12949, 12952),\n",
+       " ('Jon', 13084, 13087),\n",
+       " ('Rickon', 13150, 13156),\n",
+       " ('Snow', 13209, 13213),\n",
+       " ('Jon', 13395, 13398),\n",
+       " ('Stark', 13458, 13463),\n",
+       " ('Jon', 13465, 13468),\n",
+       " ('Stark', 13490, 13495),\n",
+       " ('Jon', 13532, 13535),\n",
+       " ('Robb', 13550, 13554),\n",
+       " ('Bran', 14457, 14461),\n",
+       " ('Robb', 14473, 14477),\n",
+       " ('Robb', 14547, 14551),\n",
+       " ('Jory', 14598, 14602),\n",
+       " ('Desmond', 14604, 14611),\n",
+       " ('Jon', 14952, 14955),\n",
+       " ('Jon', 14988, 14991),\n",
+       " ('Jon', 15166, 15169),\n",
+       " ('Jon', 15210, 15213),\n",
+       " ('Jon', 15464, 15467),\n",
+       " ('Theon Greyjoy', 15794, 15807),\n",
+       " ('Jon Snow', 15880, 15888),\n",
+       " ('Greyjoy', 15948, 15955)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
