--- a/GOT/GOT_Session2.ipynb
+++ b/GOT/GOT_Session2.ipynb
@@ -81,409 +81,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "chapter = characters['1–1-Bran']\n",
     "# sort: tri en ordre croissant\n",
     "# pour chaque key, prendre l'élément 1 de la clé puis trier les ensembles avec sort\n",
-    "chapter.sort(key=lambda a:a[1],reverse=False)\n",
+    "def get_edges_from_chapter(chapter):\n",
+    "    chapter.sort(key=lambda a:a[1],reverse=False)\n",
     "\n",
-    "#print(chapter)\n",
-    "potential_edges = []\n",
-    "for i in range(0,len(chapter)): # prend le 1er de la liste\n",
-    "    name1,start1,end1 = chapter[i]\n",
-    "    for j in range(i+1,len(chapter)):\n",
-    "        name2,start2,end2 = chapter[j]\n",
-    "        if name2 != name1:\n",
-    "            potential_edges.append((name1,name2,{'dist':start2-end1}))\n",
-    "#print(len(potential_edges))\n",
-    "#print(potential_edges)"
+    "    #print(chapter)\n",
+    "    potential_edges = []\n",
+    "    for i in range(0,len(chapter)): # prend le 1er de la liste\n",
+    "        name1,start1,end1 = chapter[i]\n",
+    "        for j in range(i+1,len(chapter)):\n",
+    "            name2,start2,end2 = chapter[j]\n",
+    "            if name2 != name1:\n",
+    "                potential_edges.append((name1,name2,{'dist':start2-end1}))\n",
+    "    #print(len(potential_edges))\n",
+    "    #print(potential_edges)\n",
+    "    \n",
+    "    edges = {}\n",
+    "    for name1,name2,value in potential_edges:\n",
+    "        if (name1,name2) not in edges.keys():\n",
+    "            if (name2,name1) not in edges.keys():\n",
+    "                edges[(name1,name2)] = {'values':[value['dist']]}\n",
+    "            else:\n",
+    "                edges[(name2,name1)]['values'].append(value['dist'])\n",
+    "        else:\n",
+    "            edges[(name1,name2)]['values'].append(value['dist'])\n",
+    "\n",
+    "    for k,v in edges.items():\n",
+    "        # 25: 25%\n",
+    "        # percentile: écarts types\n",
+    "        #edges[k]['weight']=np.percentile(v['values'],25)\n",
+    "        edges[k]['weight']=len([a for a in v['values'] if a <1000])\n",
+    "        #print(k,edges[k]['weight'])\n",
+    "\n",
+    "    ready_for_nx = []\n",
+    "    for k,v in edges.items():\n",
+    "        name1 = k[0]\n",
+    "        name2 = k[1]\n",
+    "        weight = v['weight']\n",
+    "        if weight > 0:\n",
+    "            ready_for_nx.append((name1,name2,{'weight':weight}))\n",
+    "    return ready_for_nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chapter in characters.values():\n",
+    "    GOT.add_edges_from(get_edges_from_chapter(chapter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Bran', 'Robb') 36\n",
-      "('Bran', 'Mance Rayder') 1\n",
-      "('Bran', 'Old Nan') 3\n",
-      "('Bran', 'Jon') 23\n",
-      "('Bran', 'Stark') 6\n",
-      "('Bran', 'Eddard Stark') 2\n",
-      "('Bran', 'Theon Greyjoy') 6\n",
-      "('Bran', 'Jory Cassel') 3\n",
-      "('Bran', 'Robert') 4\n",
-      "('Bran', 'Eddard') 0\n",
-      "('Bran', 'North') 0\n",
-      "('Bran', 'Jon Snow') 0\n",
-      "('Bran', 'Greyjoy') 4\n",
-      "('Bran', 'Theon') 0\n",
-      "('Bran', 'Ass') 0\n",
-      "('Bran', 'Targaryen') 2\n",
-      "('Bran', 'Starks') 1\n",
-      "('Bran', 'Jory') 8\n",
-      "('Bran', 'Ice') 1\n",
-      "('Bran', 'Direwolves') 0\n",
-      "('Bran', 'Hullen') 0\n",
-      "('Bran', 'Harwin') 0\n",
-      "('Bran', \"Ser Rodrik's\") 0\n",
-      "('Bran', 'Rickon') 0\n",
-      "('Bran', 'Snow') 0\n",
-      "('Bran', 'Desmond') 1\n",
-      "('Robb', 'Mance Rayder') 3\n",
-      "('Robb', 'Old Nan') 7\n",
-      "('Robb', 'Jon') 113\n",
-      "('Robb', 'Stark') 15\n",
-      "('Robb', 'Eddard Stark') 1\n",
-      "('Robb', 'Theon Greyjoy') 19\n",
-      "('Robb', 'Jory Cassel') 7\n",
-      "('Robb', 'Robert') 4\n",
-      "('Robb', 'Eddard') 1\n",
-      "('Robb', 'North') 1\n",
-      "('Robb', 'Jon Snow') 9\n",
-      "('Robb', 'Greyjoy') 23\n",
-      "('Robb', 'Theon') 1\n",
-      "('Robb', 'Ass') 4\n",
-      "('Robb', 'Targaryen') 3\n",
-      "('Robb', 'Starks') 4\n",
-      "('Robb', 'Jory') 41\n",
-      "('Robb', 'Ice') 6\n",
-      "('Robb', 'Direwolves') 4\n",
-      "('Robb', 'Hullen') 5\n",
-      "('Robb', 'Harwin') 2\n",
-      "('Robb', \"Ser Rodrik's\") 2\n",
-      "('Robb', 'Rickon') 2\n",
-      "('Robb', 'Snow') 2\n",
-      "('Robb', 'Desmond') 2\n",
-      "('Mance Rayder', 'Old Nan') 1\n",
-      "('Mance Rayder', 'Jon') 1\n",
-      "('Mance Rayder', 'Stark') 0\n",
-      "('Mance Rayder', 'Eddard Stark') 0\n",
-      "('Mance Rayder', 'Theon Greyjoy') 0\n",
-      "('Mance Rayder', 'Jory Cassel') 0\n",
-      "('Mance Rayder', 'Robert') 0\n",
-      "('Mance Rayder', 'Eddard') 0\n",
-      "('Mance Rayder', 'North') 0\n",
-      "('Mance Rayder', 'Jon Snow') 0\n",
-      "('Mance Rayder', 'Greyjoy') 0\n",
-      "('Mance Rayder', 'Theon') 0\n",
-      "('Mance Rayder', 'Ass') 0\n",
-      "('Mance Rayder', 'Targaryen') 0\n",
-      "('Mance Rayder', 'Starks') 0\n",
-      "('Mance Rayder', 'Jory') 0\n",
-      "('Mance Rayder', 'Ice') 0\n",
-      "('Mance Rayder', 'Direwolves') 0\n",
-      "('Mance Rayder', 'Hullen') 0\n",
-      "('Mance Rayder', 'Harwin') 0\n",
-      "('Mance Rayder', \"Ser Rodrik's\") 0\n",
-      "('Mance Rayder', 'Rickon') 0\n",
-      "('Mance Rayder', 'Snow') 0\n",
-      "('Mance Rayder', 'Desmond') 0\n",
-      "('Old Nan', 'Jon') 3\n",
-      "('Old Nan', 'Stark') 0\n",
-      "('Old Nan', 'Eddard Stark') 0\n",
-      "('Old Nan', 'Theon Greyjoy') 0\n",
-      "('Old Nan', 'Jory Cassel') 0\n",
-      "('Old Nan', 'Robert') 1\n",
-      "('Old Nan', 'Eddard') 0\n",
-      "('Old Nan', 'North') 0\n",
-      "('Old Nan', 'Jon Snow') 0\n",
-      "('Old Nan', 'Greyjoy') 0\n",
-      "('Old Nan', 'Theon') 0\n",
-      "('Old Nan', 'Ass') 0\n",
-      "('Old Nan', 'Targaryen') 1\n",
-      "('Old Nan', 'Starks') 1\n",
-      "('Old Nan', 'Jory') 0\n",
-      "('Old Nan', 'Ice') 0\n",
-      "('Old Nan', 'Direwolves') 0\n",
-      "('Old Nan', 'Hullen') 0\n",
-      "('Old Nan', 'Harwin') 0\n",
-      "('Old Nan', \"Ser Rodrik's\") 0\n",
-      "('Old Nan', 'Rickon') 0\n",
-      "('Old Nan', 'Snow') 0\n",
-      "('Old Nan', 'Desmond') 0\n",
-      "('Jon', 'Stark') 31\n",
-      "('Jon', 'Eddard Stark') 0\n",
-      "('Jon', 'Theon Greyjoy') 17\n",
-      "('Jon', 'Jory Cassel') 3\n",
-      "('Jon', 'Robert') 2\n",
-      "('Jon', 'Eddard') 2\n",
-      "('Jon', 'North') 3\n",
-      "('Jon', 'Jon Snow') 15\n",
-      "('Jon', 'Greyjoy') 26\n",
-      "('Jon', 'Theon') 4\n",
-      "('Jon', 'Ass') 5\n",
-      "('Jon', 'Targaryen') 2\n",
-      "('Jon', 'Starks') 2\n",
-      "('Jon', 'Jory') 23\n",
-      "('Jon', 'Ice') 3\n",
-      "('Jon', 'Direwolves') 3\n",
-      "('Jon', 'Hullen') 4\n",
-      "('Jon', 'Harwin') 4\n",
-      "('Jon', \"Ser Rodrik's\") 5\n",
-      "('Jon', 'Rickon') 8\n",
-      "('Jon', 'Snow') 8\n",
-      "('Jon', 'Desmond') 5\n",
-      "('Stark', 'Eddard Stark') 1\n",
-      "('Stark', 'Theon Greyjoy') 2\n",
-      "('Stark', 'Jory Cassel') 1\n",
-      "('Stark', 'Robert') 1\n",
-      "('Stark', 'Eddard') 1\n",
-      "('Stark', 'North') 0\n",
-      "('Stark', 'Jon Snow') 1\n",
-      "('Stark', 'Greyjoy') 3\n",
-      "('Stark', 'Theon') 1\n",
-      "('Stark', 'Ass') 1\n",
-      "('Stark', 'Targaryen') 0\n",
-      "('Stark', 'Starks') 0\n",
-      "('Stark', 'Jory') 0\n",
-      "('Stark', 'Ice') 0\n",
-      "('Stark', 'Direwolves') 0\n",
-      "('Stark', 'Hullen') 1\n",
-      "('Stark', 'Harwin') 1\n",
-      "('Stark', \"Ser Rodrik's\") 1\n",
-      "('Stark', 'Rickon') 3\n",
-      "('Stark', 'Snow') 3\n",
-      "('Stark', 'Desmond') 0\n",
-      "('Eddard Stark', 'Theon Greyjoy') 1\n",
-      "('Eddard Stark', 'Jory Cassel') 1\n",
-      "('Eddard Stark', 'Robert') 1\n",
-      "('Eddard Stark', 'Eddard') 1\n",
-      "('Eddard Stark', 'North') 1\n",
-      "('Eddard Stark', 'Jon Snow') 1\n",
-      "('Eddard Stark', 'Greyjoy') 0\n",
-      "('Eddard Stark', 'Theon') 0\n",
-      "('Eddard Stark', 'Ass') 0\n",
-      "('Eddard Stark', 'Targaryen') 0\n",
-      "('Eddard Stark', 'Starks') 0\n",
-      "('Eddard Stark', 'Jory') 0\n",
-      "('Eddard Stark', 'Ice') 0\n",
-      "('Eddard Stark', 'Direwolves') 0\n",
-      "('Eddard Stark', 'Hullen') 0\n",
-      "('Eddard Stark', 'Harwin') 0\n",
-      "('Eddard Stark', \"Ser Rodrik's\") 0\n",
-      "('Eddard Stark', 'Rickon') 0\n",
-      "('Eddard Stark', 'Snow') 0\n",
-      "('Eddard Stark', 'Desmond') 0\n",
-      "('Theon Greyjoy', 'Jory Cassel') 3\n",
-      "('Theon Greyjoy', 'Robert') 1\n",
-      "('Theon Greyjoy', 'Eddard') 1\n",
-      "('Theon Greyjoy', 'North') 1\n",
-      "('Theon Greyjoy', 'Jon Snow') 2\n",
-      "('Theon Greyjoy', 'Greyjoy') 10\n",
-      "('Theon Greyjoy', 'Theon') 0\n",
-      "('Theon Greyjoy', 'Ass') 0\n",
-      "('Theon Greyjoy', 'Targaryen') 0\n",
-      "('Theon Greyjoy', 'Starks') 0\n",
-      "('Theon Greyjoy', 'Jory') 13\n",
-      "('Theon Greyjoy', 'Ice') 3\n",
-      "('Theon Greyjoy', 'Direwolves') 1\n",
-      "('Theon Greyjoy', 'Hullen') 2\n",
-      "('Theon Greyjoy', 'Harwin') 1\n",
-      "('Theon Greyjoy', \"Ser Rodrik's\") 1\n",
-      "('Theon Greyjoy', 'Rickon') 0\n",
-      "('Theon Greyjoy', 'Snow') 0\n",
-      "('Theon Greyjoy', 'Desmond') 0\n",
-      "('Jory Cassel', 'Robert') 1\n",
-      "('Jory Cassel', 'Eddard') 1\n",
-      "('Jory Cassel', 'North') 1\n",
-      "('Jory Cassel', 'Jon Snow') 1\n",
-      "('Jory Cassel', 'Greyjoy') 4\n",
-      "('Jory Cassel', 'Theon') 1\n",
-      "('Jory Cassel', 'Ass') 0\n",
-      "('Jory Cassel', 'Targaryen') 0\n",
-      "('Jory Cassel', 'Starks') 0\n",
-      "('Jory Cassel', 'Jory') 5\n",
-      "('Jory Cassel', 'Ice') 1\n",
-      "('Jory Cassel', 'Direwolves') 0\n",
-      "('Jory Cassel', 'Hullen') 0\n",
-      "('Jory Cassel', 'Harwin') 0\n",
-      "('Jory Cassel', \"Ser Rodrik's\") 0\n",
-      "('Jory Cassel', 'Rickon') 0\n",
-      "('Jory Cassel', 'Snow') 0\n",
-      "('Jory Cassel', 'Desmond') 0\n",
-      "('Robert', 'Eddard') 1\n",
-      "('Robert', 'North') 1\n",
-      "('Robert', 'Jon Snow') 1\n",
-      "('Robert', 'Greyjoy') 1\n",
-      "('Robert', 'Theon') 1\n",
-      "('Robert', 'Ass') 0\n",
-      "('Robert', 'Targaryen') 1\n",
-      "('Robert', 'Starks') 1\n",
-      "('Robert', 'Jory') 1\n",
-      "('Robert', 'Ice') 0\n",
-      "('Robert', 'Direwolves') 0\n",
-      "('Robert', 'Hullen') 0\n",
-      "('Robert', 'Harwin') 0\n",
-      "('Robert', \"Ser Rodrik's\") 0\n",
-      "('Robert', 'Rickon') 0\n",
-      "('Robert', 'Snow') 0\n",
-      "('Robert', 'Desmond') 0\n",
-      "('Eddard', 'North') 1\n",
-      "('Eddard', 'Jon Snow') 1\n",
-      "('Eddard', 'Greyjoy') 2\n",
-      "('Eddard', 'Theon') 1\n",
-      "('Eddard', 'Ass') 1\n",
-      "('Eddard', 'Targaryen') 0\n",
-      "('Eddard', 'Starks') 0\n",
-      "('Eddard', 'Jory') 0\n",
-      "('Eddard', 'Ice') 0\n",
-      "('Eddard', 'Direwolves') 0\n",
-      "('Eddard', 'Hullen') 0\n",
-      "('Eddard', 'Harwin') 0\n",
-      "('Eddard', \"Ser Rodrik's\") 0\n",
-      "('Eddard', 'Rickon') 0\n",
-      "('Eddard', 'Snow') 0\n",
-      "('Eddard', 'Desmond') 0\n",
-      "('North', 'Jon Snow') 1\n",
-      "('North', 'Greyjoy') 2\n",
-      "('North', 'Theon') 1\n",
-      "('North', 'Ass') 1\n",
-      "('North', 'Targaryen') 0\n",
-      "('North', 'Starks') 0\n",
-      "('North', 'Jory') 0\n",
-      "('North', 'Ice') 0\n",
-      "('North', 'Direwolves') 0\n",
-      "('North', 'Hullen') 0\n",
-      "('North', 'Harwin') 0\n",
-      "('North', \"Ser Rodrik's\") 0\n",
-      "('North', 'Rickon') 0\n",
-      "('North', 'Snow') 0\n",
-      "('North', 'Desmond') 0\n",
-      "('Jon Snow', 'Greyjoy') 5\n",
-      "('Jon Snow', 'Theon') 2\n",
-      "('Jon Snow', 'Ass') 2\n",
-      "('Jon Snow', 'Targaryen') 0\n",
-      "('Jon Snow', 'Starks') 0\n",
-      "('Jon Snow', 'Jory') 0\n",
-      "('Jon Snow', 'Ice') 0\n",
-      "('Jon Snow', 'Direwolves') 0\n",
-      "('Jon Snow', 'Hullen') 0\n",
-      "('Jon Snow', 'Harwin') 0\n",
-      "('Jon Snow', \"Ser Rodrik's\") 0\n",
-      "('Jon Snow', 'Rickon') 0\n",
-      "('Jon Snow', 'Snow') 0\n",
-      "('Jon Snow', 'Desmond') 0\n",
-      "('Greyjoy', 'Theon') 2\n",
-      "('Greyjoy', 'Ass') 2\n",
-      "('Greyjoy', 'Targaryen') 0\n",
-      "('Greyjoy', 'Starks') 0\n",
-      "('Greyjoy', 'Jory') 12\n",
-      "('Greyjoy', 'Ice') 3\n",
-      "('Greyjoy', 'Direwolves') 0\n",
-      "('Greyjoy', 'Hullen') 2\n",
-      "('Greyjoy', 'Harwin') 1\n",
-      "('Greyjoy', \"Ser Rodrik's\") 1\n",
-      "('Greyjoy', 'Rickon') 0\n",
-      "('Greyjoy', 'Snow') 0\n",
-      "('Greyjoy', 'Desmond') 0\n",
-      "('Theon', 'Ass') 1\n",
-      "('Theon', 'Targaryen') 0\n",
-      "('Theon', 'Starks') 0\n",
-      "('Theon', 'Jory') 0\n",
-      "('Theon', 'Ice') 0\n",
-      "('Theon', 'Direwolves') 0\n",
-      "('Theon', 'Hullen') 0\n",
-      "('Theon', 'Harwin') 0\n",
-      "('Theon', \"Ser Rodrik's\") 0\n",
-      "('Theon', 'Rickon') 0\n",
-      "('Theon', 'Snow') 0\n",
-      "('Theon', 'Desmond') 0\n",
-      "('Ass', 'Targaryen') 0\n",
-      "('Ass', 'Starks') 0\n",
-      "('Ass', 'Jory') 0\n",
-      "('Ass', 'Ice') 0\n",
-      "('Ass', 'Direwolves') 0\n",
-      "('Ass', 'Hullen') 0\n",
-      "('Ass', 'Harwin') 0\n",
-      "('Ass', \"Ser Rodrik's\") 0\n",
-      "('Ass', 'Rickon') 0\n",
-      "('Ass', 'Snow') 0\n",
-      "('Ass', 'Desmond') 0\n",
-      "('Targaryen', 'Starks') 1\n",
-      "('Targaryen', 'Jory') 1\n",
-      "('Targaryen', 'Ice') 0\n",
-      "('Targaryen', 'Direwolves') 0\n",
-      "('Targaryen', 'Hullen') 0\n",
-      "('Targaryen', 'Harwin') 0\n",
-      "('Targaryen', \"Ser Rodrik's\") 0\n",
-      "('Targaryen', 'Rickon') 0\n",
-      "('Targaryen', 'Snow') 0\n",
-      "('Targaryen', 'Desmond') 0\n",
-      "('Starks', 'Jory') 2\n",
-      "('Starks', 'Ice') 0\n",
-      "('Starks', 'Direwolves') 0\n",
-      "('Starks', 'Hullen') 0\n",
-      "('Starks', 'Harwin') 0\n",
-      "('Starks', \"Ser Rodrik's\") 0\n",
-      "('Starks', 'Rickon') 0\n",
-      "('Starks', 'Snow') 0\n",
-      "('Starks', 'Desmond') 0\n",
-      "('Jory', 'Ice') 3\n",
-      "('Jory', 'Direwolves') 3\n",
-      "('Jory', 'Hullen') 4\n",
-      "('Jory', 'Harwin') 1\n",
-      "('Jory', \"Ser Rodrik's\") 1\n",
-      "('Jory', 'Rickon') 0\n",
-      "('Jory', 'Snow') 0\n",
-      "('Jory', 'Desmond') 1\n",
-      "('Ice', 'Direwolves') 0\n",
-      "('Ice', 'Hullen') 0\n",
-      "('Ice', 'Harwin') 0\n",
-      "('Ice', \"Ser Rodrik's\") 0\n",
-      "('Ice', 'Rickon') 0\n",
-      "('Ice', 'Snow') 0\n",
-      "('Ice', 'Desmond') 0\n",
-      "('Direwolves', 'Hullen') 0\n",
-      "('Direwolves', 'Harwin') 0\n",
-      "('Direwolves', \"Ser Rodrik's\") 0\n",
-      "('Direwolves', 'Rickon') 0\n",
-      "('Direwolves', 'Snow') 0\n",
-      "('Direwolves', 'Desmond') 0\n",
-      "('Hullen', 'Harwin') 2\n",
-      "('Hullen', \"Ser Rodrik's\") 2\n",
-      "('Hullen', 'Rickon') 0\n",
-      "('Hullen', 'Snow') 0\n",
-      "('Hullen', 'Desmond') 0\n",
-      "('Harwin', \"Ser Rodrik's\") 1\n",
-      "('Harwin', 'Rickon') 0\n",
-      "('Harwin', 'Snow') 0\n",
-      "('Harwin', 'Desmond') 0\n",
-      "(\"Ser Rodrik's\", 'Rickon') 1\n",
-      "(\"Ser Rodrik's\", 'Snow') 1\n",
-      "(\"Ser Rodrik's\", 'Desmond') 0\n",
-      "('Rickon', 'Snow') 1\n",
-      "('Rickon', 'Desmond') 0\n",
-      "('Snow', 'Desmond') 0\n"
+      "Name: \n",
+      "Type: Graph\n",
+      "Number of nodes: 5522\n",
+      "Number of edges: 622352\n",
+      "Average degree: 225.4082\n"
      ]
     }
    ],
    "source": [
-    "edges = {}\n",
-    "for name1,name2,value in potential_edges:\n",
-    "    if (name1,name2) not in edges.keys():\n",
-    "        if (name2,name1) not in edges.keys():\n",
-    "            edges[(name1,name2)] = {'values':[value['dist']]}\n",
-    "        else:\n",
-    "            edges[(name2,name1)]['values'].append(value['dist'])\n",
-    "    else:\n",
-    "        edges[(name1,name2)]['values'].append(value['dist'])\n",
-    "\n",
-    "for k,v in edges.items():\n",
-    "    # 25: 25%\n",
-    "    # percentile: écarts types\n",
-    "    #edges[k]['weight']=np.percentile(v['values'],25)\n",
-    "    edges[k]['weight']=len([a for a in v['values'] if a < 1000])\n",
-    "    print(k,edges[k]['weight'])\n",
-    "    \n",
-    "#edges"
+    "print(nx.info(GOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_gexf(GOT,'GOT-version-1.gexf')"
    ]
   },
   {
