--- a/GOT/GOT_Session2.ipynb
+++ b/GOT/GOT_Session2.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "# NetworkX is a Python package for the creation, manipulation,\n",
+    "# and study of the structure, dynamics, and functions of complex networks.\n",
     "import networkx as nx\n",
+    "# NumPy est une extension du langage de programmation Python,\n",
+    "# destinée à manipuler des matrices ou tableaux multidimensionnels\n",
+    "# ainsi que des fonctions mathématiques opérant sur ces tableaux. \n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,12 +27,13 @@
        "340"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# characters = Dictionnaire des chapitres et des nom\n",
     "with open('GOT-characters-raw.pickle','rb') as fp:\n",
     "    characters = pickle.load(fp)\n",
     "len(characters.keys())"
@@ -35,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,18 +53,19 @@
     }
    ],
    "source": [
-    "# set() : Créer des éléments unique\n",
+    "# set() : Est un module qui créer une liste d'éléments uniques\n",
+    "# entities = collection\n",
     "entities = set()\n",
-    "for chapter in characters.values():\n",
+    "for chapter in characters.values(): # .values() = Liste les valeurs de chaque keys\n",
     "    for entity in chapter:\n",
-    "        name = entity[0]\n",
+    "        name = entity[0] # entities = chaque valeur d'une keys\n",
     "        entities.add(name)\n",
     "print(len(entities))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,20 +81,21 @@
     }
    ],
    "source": [
+    "# Cré un graph\n",
     "GOT = nx.Graph()\n",
     "print(nx.info(GOT))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "chapter = characters['1–1-Bran']\n",
-    "# sort: tri en ordre croissant\n",
-    "# pour chaque key, prendre l'élément 1 de la clé puis trier les ensembles avec sort\n",
     "def get_edges_from_chapter(chapter):\n",
+    "    # sort = tri en ordre croissant\n",
+    "    # lambda a:a[1] = pour chaque key, prend l'élément 1 de la clé puis trier les ensembles avec sort\n",
     "    chapter.sort(key=lambda a:a[1],reverse=False)\n",
     "\n",
     "    #print(chapter)\n",
@@ -110,13 +118,13 @@
     "                edges[(name2,name1)]['values'].append(value['dist'])\n",
     "        else:\n",
     "            edges[(name1,name2)]['values'].append(value['dist'])\n",
-    "\n",
+    "    \n",
     "    for k,v in edges.items():\n",
     "        # 25: 25%\n",
     "        # percentile: écarts types\n",
-    "        #edges[k]['weight']=np.percentile(v['values'],25)\n",
+    "        # edges[k]['weight']=np.percentile(v['values'],25)\n",
     "        edges[k]['weight']=len([a for a in v['values'] if a <1000])\n",
-    "        #print(k,edges[k]['weight'])\n",
+    "        # print(k,edges[k]['weight'])\n",
     "\n",
     "    ready_for_nx = []\n",
     "    for k,v in edges.items():\n",
