--- a/GOT/GOT_Session4.ipynb
+++ b/GOT/GOT_Session4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name1': ['Addam Frey'], 'name2': ['Addam Frey'], 'Title': ['Ser']}\n",
+      "[{'name1': ['Abelar Hightower'], 'name2': ['Abelar Hightower'], 'Title': ['Ser']}, {'name1': ['Addam Frey'], 'name2': ['Addam Frey'], 'Title': ['Ser']}]\n"
+     ]
+    }
+   ],
    "source": [
     "list_spe = []\n",
     "\n",
-    "for element in os.listdir('awoif/')[1:]:\n",
+    "for element in os.listdir('awoif/')[1:3]:\n",
     "    val_char = {}\n",
     "    html = 'awoif/' + element\n",
     "    f = codecs.open(html, 'r', 'utf-8')\n",
@@ -39,18 +48,81 @@
     "        name2 = [link.get_text().lstrip().rstrip()]\n",
     "    val_char['name2'] = name2\n",
     "\n",
-    "    tables = soup.select('table.infobox')\n",
+    "    tables = soup.find_all('table', class_='infobox')\n",
     "    for table in tables:\n",
     "        trs = table.find_all('tr')\n",
     "        for tr in trs:\n",
     "            if tr.th != None:\n",
     "                values = []\n",
-    "                ats = tr.find_all(href=re.compile(\"index.php\"))\n",
-    "                for a in ats:\n",
-    "                    values.append(a.contents[0].string)\n",
     "                spe = tr.contents[0].string\n",
-    "                val_char[spe] = values\n",
-    "    list_spe.append(val_char)"
+    "                #print(spe)\n",
+    "                if spe == 'Full Name' or spe == 'Alias' or spe == 'Title' or spe == 'Titles':\n",
+    "                    #print(spe)\n",
+    "                    ats = tr.find_all(href=re.compile(\"index.php\"))\n",
+    "                    for a in ats:\n",
+    "                        values.append(a.contents[0].string)\n",
+    "                    if values == []:\n",
+    "                        tds = tr.find_all('td')\n",
+    "                        for td in tds:\n",
+    "                            values.append(td.contents[0].lstrip())\n",
+    "                    val_char[spe] = values\n",
+    "                    #print(val_char)\n",
+    "    list_spe.append(val_char)\n",
+    "print(val_char)\n",
+    "    #print(val_char)\n",
+    "    #print(' ')\n",
+    "print(list_spe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listb = [{'name1': ['Abelar Hightower'], 'name2': ['Abelar Hightower'], 'Title': ['Ser']}, {'name1': ['Addam Frey'], 'name2': ['Addam Frey'], 'Title': ['Ser']}]\n",
+    "with open('list_spe_char.pickle','wb+') as fp:\n",
+    "    pickle.dump(listb, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name1': ['Abelar Hightower'],\n",
+       "  'name2': ['Abelar Hightower'],\n",
+       "  'Title': ['Ser']},\n",
+       " {'name1': ['Addam Frey'], 'name2': ['Addam Frey'], 'Title': ['Ser']}]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_spe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2048\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list_spe))"
    ]
   },
   {
@@ -8887,7 +8959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -8897,7 +8969,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-177-ebfce41a1f0d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'list_spe_char.pickle'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'wb+'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_spe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-109-ebfce41a1f0d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'list_spe_char.pickle'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'wb+'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_spe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded while calling a Python object"
      ]
     }
